--- a/public/static/favicon/manifest.json
+++ b/public/static/favicon/manifest.json
@@ -1,47 +1,57 @@
 {
-  "$schema": "https://json.schemastore.org/web-manifest-combined.json",
   "name": "Ko Di Undang",
   "short_name": "kodiundang",
   "start_url": "https://kodiundang.github.io/",
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait-primary",
-  "theme_color": "black",
+  "theme_color": "#000",
   "background_color": "#111",
   "description": "Undangan Digital Gratisss...",
-  "file_handlers": [
-    {
-      "action": "index.html",
-      "accept": {
-        "audio/mp3": ".mp3"
-      }
-    },
-    {
-      "action": "index.html",
-      "accept": {
-        "audio/ogg": ".ogg"
-      }
-    }
-  ],
   "icons": [{
+    "src": "favicon-16x16.png",
+    "sizes": "16x16",
+    "type": "image/png",
+    "purpose": "any"
+  },{
+    "src": "favicon-32x32.png",
+    "sizes": "32x32",
+    "type": "image/png",
+    "purpose": "any"
+  },{
     "src": "apple-icon-72x72.png",
     "sizes": "72x72",
-    "type": "image/png"
+    "type": "image/png",
+    "purpose": "any"
   }, {
     "src": "favicon-96x96.png",
     "sizes": "96x96",
-    "type": "image/png"
+    "type": "image/png",
+    "purpose": "any"
   }, {
     "src": "favicon-120x120.png",
     "sizes": "120x120",
-    "type": "image/png"
+    "type": "image/png",
+    "purpose": "any"
   }, {
     "src": "apple-icon-144x144.png",
     "sizes": "144x144",
-    "type": "image/png"
+    "type": "image/png",
+    "purpose": "any"
   }, {
     "src": "android-icon-192x192.png",
     "sizes": "192x192",
-    "type": "image/png"
+    "type": "image/png",
+    "purpose": "any"
+  }, {
+    "src": "favicon-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png",
+    "purpose": "maskable"
+  }, {
+    "src": "/public/static/images/gift.png",
+    "sizes": "1508x1508",
+    "type": "image/jpg",
+    "purpose": "any"
   }]
 }
